syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.socialmedia.post";
option java_outer_classname = "PostProto";

package post;

service PostService {
  rpc GetPostDetails (PostRequest) returns (PostResponse);
  rpc AddPost (AddPostRequest) returns (AddPostResponse);
}

message PostRequest {
  string postId = 1;
}

message PostResponse {
  string postId = 1;
  string userId = 2;
  string content = 3;
  repeated CommentResponse comments = 4;
}

message AddPostRequest {
  string userId = 1;
  string content = 2;
}

message AddPostResponse {
  string postId = 1;
}

message CommentResponse {
  string commentId = 1;
  string userId = 2;
  string content = 3;
  string timestamp = 4;
}
